--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
         <string name="example_email">ejemplo@gmail.com</string>
         <string name="sing_up_button">Registrarse</string>
         <string name="google_button">G Google</string>
-
+        <string name="titulocalendario">Calendario</string>
 
 
     <string-array name="array_estats_tasca">
