--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
         <string name="google_button">G Google</string>
         <string name="titulocalendario">Calendario</string>
     <string name="channel_name">Alertes de l’Agenda</string>
+    <string name="snooze">Posponer</string>
+    <string name="channel_description">Es un recordatorio de que tienes algo pendiente</string>
 
 
     <string-array name="array_estats_tasca">
