--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">X&amp;O-Agenda</string>
+    <string name="drawer_open">Open menu</string>
+    <string name="drawer_close">Close menu</string>
+    <string name="close_menu">Close menu</string>
+    <string name="hello_message">Hello! Nice to see you again.</string>
     <string name="sign_in">Login</string>
+    <string name="email">Email</string>
+    <string name="agenda">AGENDA</string>
+    <string name="password">Password</string>
+    <string name="sing_in_button">Login</string>
+    <string name="remember_me">Remember me</string>
+    <string name="forgot_password">Forgot your password?</string>
+    <string name="example_email">example@gmail.com</string>
+    <string name="sing_up_button">Register</string>
+    <string name="google_button">G Google</string>
     <string name="titulocalendario">Calendar</string>
+    <string name="channel_name">Agenda Alerts</string>
+    <string name="channel_description">It\'s a reminder that you have something pending</string>
+    <string name="default_title">Reminder</string>
+    <string name="alertas">Alerts</string>
+    <string name="configuraci_n">Configuration</string>
+    <string name="vincular_calendario_de_google">Link Google Calendar</string>
+    <string name="idioma_espa_ol">Language : Spanish</string>
+    <string name="cerrar_session">Close Session</string>
+    <string name="eliminar_cuenta">Delete Account!</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="perfil">Profile</string>
+    <string name="nombre">Number</string>
+    <string name="email_cambio">Email</string>
+    <string name="phone">Phone</string>
+    <string name="olvidaste_tu_contrase_a">Forgot your password?</string>
+    <string name="restablecer_contrase_a">Reset Password</string>
+    <string name="confirm">Confirm</string>
+    <string name="nombre_perfil">Name</string>
+    <string name="email_perfil">Email</string>
+    <string name="telefono">Phone</string>
+    <string name="perfil_menu">Profile</string>
+    <string name="calendario_menu">Calendar</string>
+    <string name="alertas_menu">Alerts</string>
+    <string name="toca_per_seleccionar_la_data">Tap to select date</string>
+    <string name="data_l_mit">Deadline:</string>
+    <string name="activar_recordatori">Activate reminder:</string>
+    <string name="toca_per_seleccionar_data_de_recordatorio">Tap to select reminder date</string>
+    <string name="estado">state</string>
+    <string name="descripci">Description</string>
+    <string name="t_tol_de_la_tasca">Task title</string>
+    <string name="t_tol_del_esdeveniment">Event title</string>
+    <string name="data_inici">Start Date:</string>
+    <string name="guardar">Save</string>
+    <string name="data_finalitzaci">Completion Date:</string>
+    <string name="account_recovery">Account Recovery</string>
+    <string name="send_recovery_mail">Send Recovery Mail</string>
+    <string name="debe_esperar_5_minutos_antes_de_enviar_otro_correo">You must wait 5 minutes before sending another email.</string>
+    <string name="ya_tienes_cuenta_inicia_sesi_n">Do you already have an account? Log in!</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="confirm_your_password">Confirm your Password</string>
+    <string name="your_password">Your Password</string>
+    <string name="your_email_address">Your email address</string>
+    <string name="your_name">Your Name</string>
+    <string name="have_an_a_account_sign_in">Have an a Account ? Sign In</string>
+    <string name="i_agree_to_the_terms_of_services_and_privacy_policy">Acepto los Términos de Servicio y la Política de Privacidad.</string>
 </resources>
